# VisionConditionedASRv2

./: README.md  pyproject.toml  requirements.txt
src/: dataloader.py  model.py  model_DINOv2.py  model_demo.py  test.py  train.py  train_noise.py
