[project]
name = "VisionConditionedASRv2"
version = "0.1.0"
description = "ASR model conditioned by Visual context"
requires-python = "==3.10.13"
dependencies = [
    "audiomentations>=0.43.1",
    "numpy>=1.26.4",
    "pillow>=12.0.0",
    "pyctcdecode>=0.5.0",
    "safetensors>=0.6.2",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchcodec>=0.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "wandb>=0.22.2",
]
